syntax = "proto3";

package orderbook;
option go_package = "github.com/tendermint/tendermint/abci/example/orderbook";

import "wire.proto";

message MsgBid {
    Pair pair  = 1;
    double max_price = 2;
    double quantity = 3;
    uint64 account_id = 4;
    repeated bytes signature = 4;
}

message MsgAsk {
    Pair pair  = 1;
    double min_price = 2;
    double quantity = 3;
    uint64 account_id = 4;
    repeated bytes signature = 5;
}

message MsgCreateAccount {
    repeated bytes public_key = 1;
    repeated Commodity commodities = 2;
}

message MsgRegisterPair {
    Pair pair = 1;
}

message Msg {
    //a Msg has to be one of the below
    oneof sum {
        MsgPlaceOrder msg_place_order = 1;
        MsgRegisterPair msg_register_pair = 2;
        MsgCreateAccount msg_create_account = 3;
    }
}